<resources>
    <string name="app_name">HelloCast</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="title_place_holder">Vanishing Perspective</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="podcast_subtitle">Tap subscribe on podcasts to add them here. You\'ll see the latest episodes for all your favourite shows in one place.</string>
    <string name="podcast_title">Add your favourites</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="tab_text_one">For you</string>
    <string name="tab_text_two">News</string>
    <string name="podcast_item_title">Podcast Title</string>
    <string name="podcast_item_subtitle">Podcast Subtitle</string>
    <string name="podcast_time">7 hours ago</string>
    <string name="episode_duration">38 min</string>
    <string name="episode_title">Episode Title</string>
    <string name="progressTimer">0:00</string>
    <string name="durationTimer">30:00</string>
    <string name="popular_trending">Popular And Trending</string>
    <string name="time_elapsed">2 days ago</string>
    <string name="number_of_episodes">128 Episodes</string>
    <string name="subscribe">Subscribe</string>
    <string name="my_library">My Library</string>
    <string name="loading_description">Loading Description...</string>
    <string name="search_podcasts">Search Podcasts</string>
</resources>