<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.episodedetails.EpisodeDetailsFragment"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/podcastBannerContainer"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/podcastBanner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/test" />
        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/podcastTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/podcastBannerContainer"
            android:text="@string/podcast_item_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/podcastTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/podcastTitle"
            android:layout_alignStart="@+id/podcastTitle"
            android:text="@string/podcast_time" />
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/episodeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/episode_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <LinearLayout
        android:id="@+id/episodeActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/episode_duration"
            app:chipIcon="@drawable/ic_play_circle"
            app:chipIconTint="@color/colorPrimary"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/darkerGray"
            app:chipBackgroundColor="@android:color/transparent"
            android:id="@+id/mediaControlChip"/>

        <androidx.appcompat.widget.AppCompatImageButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_list"
            android:tint="@color/colorPrimary"
            android:id="@+id/addToPlayListBtn"/>

        <androidx.appcompat.widget.AppCompatImageButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_download_circle"
            android:tint="@color/colorPrimary"
            android:id="@+id/downloadBtn"/>

        <androidx.appcompat.widget.AppCompatImageButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:tint="@color/colorPrimary"
            android:id="@+id/shareBtn"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/episodeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/loading_description" />
</LinearLayout>