<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ripple_background"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <View
        android:id="@+id/topDivider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/podcastBannerContainer"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/podcastBanner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/test" />
        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/podcastTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/podcastBannerContainer"
            android:text="@string/podcast_item_title"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/podcastTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/podcastTitle"
            android:layout_alignStart="@+id/podcastTitle"
            android:text="@string/podcast_time" />
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/episodeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/episode_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/episodeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="2"
        android:text="@string/hide_bottom_view_on_scroll_behavior" />

    <LinearLayout
        android:id="@+id/episodeActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/mediaControlChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/episode_duration"
            app:chipBackgroundColor="@android:color/transparent"
            app:chipIcon="@drawable/ic_play_circle"
            app:chipIconTint="@color/colorPrimary"
            app:chipStrokeColor="@color/darkerGray"
            app:chipStrokeWidth="1dp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/addToPlayListBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_list"
            android:tint="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/downloadBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_download_circle"
            android:tint="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>